User Infor,Permission,Menu Category, Menu Subcategory, Login, Log Out

--- a/TG.RMSCLIENT.WEB/Views/Settings/MenuPermission.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Settings/MenuPermission.cshtml
@@ -67,6 +67,7 @@
         -moz-border-radius: 0px;
         border-radius: 0px;
     }
+    
 </style>
 
 <section id="mu-reservation">
@@ -88,7 +89,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             @*<input type="text" class="form-control" placeholder="User Id" name="UserID">*@
-                                            <select class="form-control">
+                                            <select class="form-control" id="UserID">
                                                 <option value="0">--Select User--</option>
                                                 <option value="1">User-1</option>
                                                 <option value="2">User-2</option>
