--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
@@ -17,9 +17,10 @@
     <link rel="stylesheet" type="text/css" href="~/assets/css/slick.css">
     <!-- Date Picker -->
     <link rel="stylesheet" type="text/css" href="~/assets/css/bootstrap-datepicker.css">
+    <link href="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
     <!-- Theme color -->
     <link id="switcher" href="~/assets/css/theme-color/default-theme.css" rel="stylesheet">
-
+    <script src="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/src/js/bootstrap-datetimepicker.js"></script>
 
     @* ------------------Script library---------------- *@
     @*<script src="~/Scripts/js/jquery-1.11.0.min.js"></script>*@
@@ -144,7 +145,8 @@
                                 <li><a href="/Settings/UserInformation">USER INFORMATON</a></li>
                                 <li><a href="/Settings/MenuPermission">PERMISSION</a></li>
                                 <li><a href="/Settings/MenuCategory">MENU CATEGORY</a></li>
-                                <li><a href="/Settings/MenuSubCategory">MENU SUB CATEGORY</a></li>                                
+                                <li><a href="/Settings/MenuSubCategory">MENU SUB CATEGORY</a></li>     
+                                <li><a href="/Settings/ReservationType">RESERVATION</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
