--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
@@ -154,7 +154,8 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="/FoodMenu/FoodMenuA">CREATE MENU</a></li>
                                 <li><a href="/FoodMenu/ViewMenuList">VIEW MENU</a></li>
-                                <li><a href="blog-single.html">MENU LIST</a></li>
+                                <li><a href="#">MENU LIST</a></li>
+                                <li><a href="/Reservation/ReservationAllocation">RESERVATION ALLOCATION</a></li>
                                 <li><a href="404.html">404 PAGE</a></li>
                             </ul>
                         </li>
