--- a/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Home/Index.cshtml
@@ -737,11 +737,14 @@
                         <span class="mu-title-bar"></span>
                     </div>
                     <div class="mu-reservation-content">
-
+                        @*<link href="~/assets/css/bootstrap.css" rel="stylesheet" />
+                        <link href="~/assets/ModalCS/bootstrap-dialog.css" rel="stylesheet" />
                         <script src="~/assets/js/jquery.min.js"></script>
+                        <script src="~/assets/js/bootstrap.js"></script>
+                        <script src="~/assets/ModalJS/bootstrap-dialog.js"></script>
                         <script src="~/assets/PageScript/CommonScript/mainfunction.js"></script>
                         <script src="~/assets/PageScript/CommonScript/SSRL.STYLE.js"></script>
-                        <script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>
+                        <script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>*@
                         
                         <script src="~/JavascriptFile/PageScript/Booking.js"></script>
 
@@ -797,7 +800,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Booking Qty" name="BookingQty">
+                                        <input type="text" class="form-control" placeholder="Booking Qty" name="BookingQty" id="BookingQty">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
