--- a/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <!-- Font awesome -->
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="~/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="~/assets/css/bootstrap.css" rel="stylesheet">    
+    <link href="~/assets/ModalCS/bootstrap-dialog.css" rel="stylesheet" />
     <!-- Slick slider -->
     <link rel="stylesheet" type="text/css" href="~/assets/css/slick.css">
     <!-- Date Picker -->
@@ -22,6 +23,13 @@
 
     <link href="~/assets/CustomCSS/CSS1.css" rel="stylesheet" />
     <script src="~/assets/js/jquery.min.js"></script>
+
+    
+    <script src="~/assets/js/bootstrap.js"></script>
+    @*<script src="~/assets/ModalJS/bootstrap-dialog.js"></script>*@
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.0/jquery-confirm.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.0/jquery-confirm.min.js"></script>
 
     <script src="~/assets/PageScript/CommonScript/mainfunction.js"></script>
     <script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>
