--- a/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
+++ b/TG.RMSCLIENT.WEB/Views/Shared/_LayoutAdminPanel.cshtml
@@ -13,6 +13,8 @@
     <link href="~/assets/css/font-awesome.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="~/assets/css/bootstrap.css" rel="stylesheet">
+   
+    
     <!-- Slick slider -->
     <link rel="stylesheet" type="text/css" href="~/assets/css/slick.css">
     <!-- Date Picker -->
@@ -29,7 +31,8 @@
     <script src="~/JavascriptFile/js/jquery.jqGrid.min.js"></script>
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
     <link href="~/JavascriptFile/css/ui.jqgrid-bootstrap.css" rel="stylesheet" />
-    <script src="~/JavascriptFile/bootstrap.min.js"></script>
+    <script src="~/JavascriptFile/bootstrap.min.js"></script>   
+    <script src="~/assets/ModalJS/bootstrap-dialog.js"></script>
     @* ----------------------------------------------- *@
     <script src="~/assets/PageScript/CommonScript/mainfunction.js"></script>
     <script src="~/assets/PageScript/CommonScript/SSRL.MAIN.js"></script>
@@ -138,7 +141,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
-                        <li><a href="http://rmsweb.devscraft.com/">HOME</a></li>
+                        <li><a href="/DashBoard">DASH BOARD</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" >SETTINGS <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
@@ -191,7 +194,17 @@
     <div id="contenbody">
         @RenderBody()        
     </div>    
-         
+    <section>
+        <div class="alert alert-warning" id="warning" style="display: none; margin-left: 0px; max-height: 100px;min-height:80px; border-top: solid thin #ccc; bottom: 0; width: 100%; position: fixed; z-index: 900; padding: 2px 0 2px 1px">
+            <strong>Warning!</strong> Password and Confirm Password must be same.
+        </div>
+        <div class="alert alert-success" id="success" style="display: none; margin-left: 0px; max-height: 100px;min-height:80px; border-top: solid thin #ccc; bottom: 0; width: 100%; position: fixed; z-index: 900; padding: 2px 0 2px 1px">
+            <strong>Information!</strong> Saved successfully.
+        </div>
+        <div class="alert alert-danger" id="error" style="display: none; margin-left: 0px; max-height: 100px;min-height:80px; border-top: solid thin #ccc; bottom: 0; width: 100%; position: fixed; z-index: 900; padding: 2px 0 2px 1px">
+            <strong>Danger!</strong> Error saving.
+        </div>
+    </section>   
     
     <!-- Start Map section -->
    
